Fix JobExecutor WIP